WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267779
Cannot pick US state in dropdown on vote.gov
https://bugs.webkit.org/show_bug.cgi?id=267779
Summary
Cannot pick US state in dropdown on vote.gov
Aditya Keerthi
Reported
2024-01-19 12:07:44 PST
rdar://121240580
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-01-19 12:08:12 PST
Steps to reproduce: 1. Go to
https://vote.gov
2. Either pick California in the list of states 3. Or enter “Ca” and pick California in the list of three 4. Or enter “Cali” and pick the unique item California Result: State is not picked and I cannot continue to register to vote. Expected result: California is picked and I get instructions on how to vote.
Aditya Keerthi
Comment 2
2024-01-19 12:22:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22990
EWS
Comment 3
2024-01-19 15:57:57 PST
Committed
273247@main
(ff42f7668146): <
https://commits.webkit.org/273247@main
> Reviewed commits have been landed. Closing PR #22990 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug